--- a/front-end/public/index.html
+++ b/front-end/public/index.html
@@ -10,6 +10,12 @@
       integrity="sha384-KyZXEAg3QhqLMpG8r+Knujsl5/7hb7O+1G6W0pj40tk/iC4e8f6ptl+/lmj9p4q5"
       crossorigin="anonymous"
     />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootswatch/5.1.3/cyborg/bootstrap.min.css"
+      integrity="sha384-KyZXEAg3QhqLMpG8r+Knujsl5/7hb7O+1G6W0pj40tk/iC4e8f6ptl+/lmj9p4q5"
+      crossorigin="anonymous"
+    />
     <style>
       body {
         background-color: #f8f9fa;
@@ -34,6 +40,8 @@
       }
     </style>
   </head>
-  <body>
+  <body class="dark-mode">
     <div id="root"></div>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/js/bootstrap
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/js/bootstrap.bundle.min.js"></script>
+  </body>
+</html>
